--- a/node/_tools/config.json
+++ b/node/_tools/config.json
@@ -3,13 +3,17 @@
   "ignore": {
     "common": [
       "index.js"
+    ],
+    "parallel": [
+      "test-assert.js"
     ]
   },
   "tests": {
     "parallel": [
       "test-assert.js",
       "test-assert-fail.js",
-      "test-event-emitter-listener-count.js"
+      "test-event-emitter-listener-count.js",
+      "test-events-list.js"
     ]
   },
   "suitesFolder": "suites",
